<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/colorPrimary"
    android:paddingHorizontal="@dimen/space_16">

    <LinearLayout
        android:id="@+id/menu_layout_wrapper"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menu_snackbar"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/snackbar_content"
            android:src="@drawable/snackbar"
            app:tint="@color/colorLight" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="26sp"
            android:layout_height="26sp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/knorf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:fontFamily="@font/satisfy"
            android:text="@string/app_title"
            android:textColor="@color/colorLight"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/menu_option"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:contentDescription="@string/content_description"
        android:scaleType="center"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorLight" />
</androidx.constraintlayout.widget.ConstraintLayout>