<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    android:orientation="vertical"
    tools:context=".activity.AddEditRecipeActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorDark"
        tools:layout_height="70dp" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusableInTouchMode="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@null">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/image_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingVertical="@dimen/space_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/space_16"
                    android:background="@drawable/rounded_rectangle_sm"
                    android:elevation="8dp"
                    android:padding="@dimen/space_8">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="H,16:9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_max="180dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/recipe_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/content_description"
                            android:scaleType="centerCrop"
                            tools:layout_width="wrap_content"
                            tools:src="@tools:sample/backgrounds/scenic" />
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/button_choose_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="4dp"
                        android:text="@string/button_choose_image"
                        android:textColor="@color/colorLight"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/recipe_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_8"
                    android:backgroundTint="@color/colorLight"
                    android:fontFamily="@font/satisfy"
                    android:minWidth="60dp"
                    android:paddingVertical="@dimen/space_8"
                    android:text="@string/new_recipe_text"
                    android:textColor="@color/colorLight"
                    android:textSize="32sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_content_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginVertical="@dimen/space_8"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_title_layout" />

            <ImageButton
                android:id="@+id/button_add_content"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_24"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/content_description"
                android:elevation="6dp"
                android:src="@drawable/ic_add"
                android:tint="@color/colorLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_content_recycler_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>